# c0shill

./: .gitignore  pyproject.toml
c0shill/: utils.py  write_comments.py  write_videos.py
c0shill/data/: channels.json
c0shill/mod/: youtube_connector.py
notebooks/: flatten_video_snippet.ipynb  flatten_videos.ipynb
notebooks/class/: exploration.ipynb
notebooks/tf/: flatten_video_snippet.ipynb  flatten_videos.ipynb
persist/cleansed/: comments.parquet  environmental_videos.csv
